--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,6 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.10
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - appdirs=1.4.4
@@ -112,7 +111,7 @@ dependencies:
       - accelerate==0.17.1
       - aiohttp==3.8.4
       - aiosignal==1.3.1
-      - apex
+      - apex==0.1
       - async-timeout==4.0.2
       - attrs==22.2.0
       - bitsandbytes==0.37.1
