--- a/environment.yml
+++ b/environment.yml
@@ -164,7 +164,7 @@ dependencies:
       - sympy==1.11.1
       - termcolor==2.2.0
       - tokenizers==0.13.2
-      - transformers==4.28.0.dev0
+      - transformers==4.28.0
       - triton==2.0.0
       - xxhash==3.2.0
       - yarl==1.8.2
